--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -25,63 +25,50 @@
   </div>
 <% end %>
 
-<% if can?(:mange, @group) %>
-  <section>
-    <h3><%= t('users') %></h3>
-    <table class="table table-striped">
-      <tbody>
-        <% @group.users.each do |user| %>
-          <tr>
-            <td><%= link_to(user,user) %></td>
-            <td>
-              <div class="btn-group">
-                <a class="btn btn-inverse btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
-                  <%= t('actions') %>
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><%= link_to t('remove'),
-                                [user,user.assigned_group_for(@group.id)],
-                                :method => :delete,
-                                :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure? This will this person as a member of the group.')) %></li>
-                    <li><%= link_to t('edit'), [:edit,user] %></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </section>
-<% end %>
-
-<section class="row-fluid">
-  <div class="span12">
-    <h2><%=t 'last_5_days' %></h2>
-    <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="5"></div>
+<div class="accordion" id="accordion">
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <h4 class="accordion-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseUsers">
+          <%=t 'athletes' %>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseUsers" class="accordion-collapse collapse in">
+      <div class="accordion-body">
+        <%= render 'shared/metric_cells' %>
+      </div>
+    </div>
   </div>
-</section>
-
-<section class="row-fluid">
-  <div class="span12">
-    <h2><%=t 'last_10_days' %></h2>
-    <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="10"></div>
-  </div>
-</section>
-
-<section class="row-fluid">
-  <div class="span12">
-    <h2><%=t 'last_15_days' %></h2>
-    <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="15"></div>
-  </div>
-</section>  
   
-<section class="row-fluid">
-  <div class="span12">
-    <h2><%=t 'last_30_days' %></h2>
-    <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="30"></div>
+  
+  <div class="accordion-group">
+    <div class="accordion-heading">
+      <h4 class="accordion-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#survey_graphs">
+          <%=t 'survey_graphs' %>
+        </a>
+      </h4>
+    </div>
+    <div id="survey_graphs" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        <h2><%=t 'last_5_days' %></h2>
+        <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="5"></div>
+        
+        <h2><%=t 'last_10_days' %></h2>
+        <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="10"></div>
+        
+        <h2><%=t 'last_15_days' %></h2>
+        <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="15"></div>
+        
+        <h2><%=t 'last_30_days' %></h2>
+        <div class="group-graph" data-division_id="<%= @group.division.id %>" data-group_id="<%= @group.id %>" data-day_range="30"></div>
+      </div>
+    </div>
   </div>
-</section>
+</div>
+
+<%= render 'shared/upload_modal' %>
 
 <div id="download-modal" class="modal hide fade">
   <form action="<%= division_group_path(parent,@group,format:'csv') %>" method="get" class="horizontal">
