--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -43,18 +43,19 @@
              </tr>
            </thead>
            <tbody>
-             <% division.grouped_users.each_with_index do |grouped_user_row,i| %>
-               <tr>
-                 <% grouped_user_row.each do |grouped_user| %>
-                   <td>
-                     <% if grouped_user[i] %>
-                       <%= link_to grouped_user[i], grouped_user[i] %>
-                     <% else %>
-                       &nbsp;
-                     <% end %>
-                   </td>
-                 <% end %>
-               </tr>
+             <% biggest_group_count, total_groups, user_array = division.grouped_users %>
+             <% 1.upto(biggest_group_count).each do |i| %>
+              <tr>
+                <% 1.upto(total_groups).each do |k| %>
+                  <td>
+                    <% if user_array[k-1][i-1] %>
+                      <%= link_to user_array[k-1][i-1], user_array[k-1][i-1] %>
+                    <% else %>
+                      &nbsp;
+                    <% end %>
+                  </td>
+                <% end %>
+              </tr>
              <% end %>
            </tbody>
          </table>
