--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -93,6 +93,10 @@ var _metrics = [];
   </div>
 <% end %>
 
+<div id="player-alerts">
+  
+</div>
+
 <% @metrics.in_groups_of(groups_of) do |metrics| %>
   <div class="row-fluid">
     <% metrics.each do |metric| %>
