--- a/app/views/metrics/show.html.erb
+++ b/app/views/metrics/show.html.erb
@@ -1,25 +1,65 @@
 <%- model_class = Metric -%>
-<div class="page-header">
-  <h1><%= resource %></h1>
-</div>
+
+<%= content_for(:breadcrumb) do %>
+  <div class="span6">
+    <ul class="breadcrumb">
+      <li><%= link_to t('home'), root_path %><span class="divider">/</span></li>
+      <li><%= link_to parent, parent_path %><span class="divider">/</span></li>
+      <li class="active"><%= resource %></li>
+    </ul>
+  </div>  
+  
+  <div class="span6">
+      <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                  edit_organization_metric_path(parent,@metric), :class => 'btn' %>
+      <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                  organization_metric_path(parent,@metric),
+                  :method => 'delete',
+                  :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                  :class => 'btn btn-danger' %>
+  </div>
+<% end %>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:metric_type_id) %>:</strong></dt>
   <dd><%= @metric.metric_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @metric.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:decimal_places) %>:</strong></dt>
-  <dd><%= @metric.decimal_places %></dd>
 </dl>
 
+
+<h3>
+  Alerts
+</h3>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Message</th>
+      <th>Threshold Maximum</th>
+      <th>Threshold Minimum</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% resource.alerts.each do |alert| %>
+      <tr>
+        <td><%= alert.message %></td>
+        <td><%= alert.threshold_maximum %></td>
+        <td><%= alert.threshold_minimum %></td>
+        <td>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        [:edit,resource,alert], :class => 'btn' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        [resource,alert],
+                        :method => 'delete',
+                        :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                        :class => 'btn btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              organization_metrics_path(parent), :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_organization_metric_path(parent,@metric), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              organization_metric_path(parent,@metric),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+  <%= link_to "Add Alert", new_metric_alert_path(resource,alertable_type: parent.class.name, alertable_id: parent.id), class: "btn btn-primary" %>
 </div>
