--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -96,6 +96,12 @@ border-radius: 4px 0 0 4px !important;
   margin-bottom: 20px;
 }
 
+.form-inline {
+  .control-group {
+    float: left;
+  }
+}
+
 @media print {
   .no-print,
   .breadcrumb,
