--- a/app/views/shared/_bar_graph.html.erb
+++ b/app/views/shared/_bar_graph.html.erb
@@ -4,6 +4,7 @@
 <% all_metrics = resource.recorded_metrics.reorder{ recorded_on.desc }.limit(1).where{ metric_id == my{metric.id} } %>
 <% dates = all_metrics.pluck('recorded_on').uniq %>
 _metrics.push('<%= metric.name.parameterize.underscore %>');
+_metric_ids.push({id: '<%= metric.id %>', key: '<%= metric.name.parameterize.underscore %>'});
 var _<%= metric.name.parameterize.underscore %>_data = [
   <%- dates.each do |date| %>
     <%= i > 0 ? "," : "" %><%= "#{all_metrics.where{ recorded_on == my{date} }.average(:numerical_value)}".html_safe %>
