--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -125,23 +125,22 @@ var _metric_ids = [];
           <% else %>
             <%= render partial: "shared/#{params[:graph_type]}_graph", locals: {metric: metric} %>
           <% end %>
-          <div class="comments" id="<%= metric.name.parameterize %>-comments">
-            <% if (params[:taken_users]||"").split(",").length == 1 %>
-              <% single_user = User.find((params[:taken_users]||"").split(",").first) %>
-              <%= simple_form_for [single_user, Comment.new], url: user_comments_path(single_user,format: :json), remote: true, :html => { :class => 'form-inline' } do |f| %>
-                <%= f.input :body, as: :string, placeholder: "Comment on #{single_user}...", label: false %>
-                <%= f.input :by_user_id, as: :hidden, input_html: {value: current_user.id} %>
-                <%= f.input :metric_id, as: :hidden, input_html: {value: metric.id} %>
-                <%= f.button :submit, :class => 'btn-primary', value: "Submit" %>
+          <% single_user = User.find((params[:taken_users]||"").split(",").first) if (params[:taken_users]||"").split(",").length == 1 %>
+          <div class="comments" id="<%= metric.name.parameterize %>-comments" style="<%= single_user ? 'display:block;' : 'display:none;' %>">
+            <%= simple_form_for [single_user, Comment.new], url: user_comments_path(single_user,format: :json), remote: true, :html => { :class => 'form-inline' } do |f| %>
+              <%= f.input :body, as: :string, placeholder: "Comment on #{single_user}...", label: false %>
+              <%= f.input :by_user_id, as: :hidden, input_html: {value: current_user.id} %>
+              <%= f.input :metric_id, as: :hidden, input_html: {value: metric.id} %>
+              <%= f.button :submit, :class => 'btn-primary', value: "Submit" %>
+            <% end %>
+            <div class="messages">
+              <% single_user.comments.where{ metric_id == my{metric.id}}.reorder{ id.desc }.each do |comment| %>
+                <blockquote>
+                  <p><%= comment.body %></p>
+                  <small><%= comment.commenter %> <cite><%= comment.created_at.to_date %></cite></small>
+                </blockquote>
               <% end %>
-              <div class="messages">
-                <% single_user.comments.where{ metric_id == my{metric.id}}.reorder{ id.desc }.each do |comment| %>
-                  <blockquote>
-                    <p><%= comment.body %></p>
-                    <small><%= comment.commenter %> <cite><%= comment.created_at.to_date %></cite></small>
-                  </blockquote>
-                <% end %>
-              </div>
+            </div>
             <% end %>
           </div>
           <div class="page-break"></div>
