--- a/app/views/home/_no_survey_index.html.erb
+++ b/app/views/home/_no_survey_index.html.erb
@@ -1,1 +1,3 @@
-<%= link_to t('add_survey'), [:new,@division,:assigned_survey], class: 'btn btn-large btn-primary' %>
+You have not added any surveys yet.
+
+<%= link_to t('add_survey'), [:new,@division,:assigned_survey], class: 'btn btn-mini btn-primary' %>
